@@ -1,4 +1,4 @@
-# $NetBSD: XEN0,v 1.33 2006/02/25 01:33:15 christos Exp $
+# $NetBSD: XEN0,v 1.34 2006/03/06 18:35:24 bouyer Exp $
 
 include 	"arch/xen/conf/std.xen"
 
@@ -356,6 +356,7 @@ rccide* 	at pci? dev ? function ?	# ServerWorks IDE controllers
 satalink*	at pci? dev ? function ?	# SiI SATALink controllers
 siside* 	at pci? dev ? function ?	# SiS IDE controllers
 slide*  	at pci? dev ? function ?	# Symphony Labs IDE controllers
+svwsata* 	at pci? dev ? function ?	# ServerWorks SATA controllers
 stpcide*	at pci? dev ? function ?	# STMicro STPC IDE controllers
 viaide* 	at pci? dev ? function ?	# VIA/AMD/Nvidia IDE controllers
 
